Fix alignment

--- a/src/less/theme/index.less
+++ b/src/less/theme/index.less
@@ -38,7 +38,7 @@
 		flex: 1;
 		position: relative;
 		margin-left: 50px;
-		text-align: center;
+		text-align: right;
 		width: 50%;
 
 		display: none;
@@ -48,6 +48,7 @@
 	.hero-diagram {
 		width: 100%;
 		max-width: 400px;
+		margin-top: 20px;
 	}
 }
 
